cluster/apps/media/prowlarr/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
  namespace: media
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: prowlarr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: prowlarr
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: prowlarr
          image: ghcr.io/linuxserver/prowlarr:2.6.5.5623-ls163
          ports:
            - name: http
              containerPort: 9696
          startupProbe:
            httpGet:
              path: /ping
              port: http
            initialDelaySeconds: 5
            failureThreshold: 30
            timeoutSeconds: 3
            periodSeconds: 3
          livenessProbe:
            httpGet:
              path: /ping
              port: http
            failureThreshold: 2
            timeoutSeconds: 3
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /ping
              port: http
            failureThreshold: 3
            timeoutSeconds: 3
            periodSeconds: 10
          resources:
            requests:
              memory: 100Mi
              cpu: 10m
            limits:
              memory: 250Mi
              cpu: 200m
          volumeMounts:
            - name: data
              mountPath: /config
            - name: backup
              mountPath: /config/Backups
            - name: modcache
              mountPath: /modcache
      restartPolicy: Always
      automountServiceAccountToken: false
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: prowlarr-data
        - name: backup
          persistentVolumeClaim:
            claimName: prowlarr-backup
        - name: modcache
          persistentVolumeClaim:
            claimName: prowlarr-modcache
