cluster/apps/media/prowlarr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  namespace: media
spec:
  ports:
    - name: http
      port: 9696
      targetPort: http
  type: ClusterIP
  selector:
    app: prowlarry
